--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,2 +1,7 @@
-<h1>TodoItems#index</h1>
-<p>Find me in app/views/todo_items/index.html.erb</p>
+<h1><%= @todo_list.title %></h1>
+
+<ul class="todo_items">
+	<% @todo_list.todo_items.each do |item| %>
+		<li><%= item.content %></li>
+	<% end %>
+</ul>
