--- a/app/views/todo_items/new.html.erb
+++ b/app/views/todo_items/new.html.erb
@@ -1,17 +1,4 @@
-<%= form_for [@todo_list, @todo_item] do |f| %>
-	<% if @todo_item.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@todo_item.errors.count, "error") %> prohibited this todo_list from being saved:</h2>
-
-      <ul>
-      <% @todo_item.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-	<%= f.label :content %>
-	<%= f.text_field :content %>
-	<%= f.submit "Save" %>
+<h1><%= @todo_list.title %> - Add Todo List Item</h1>
+<%= form_for [@todo_list, @todo_item] do |form| %>
+  <%= render partial: form %>
 <% end %>
