--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,6 +1,29 @@
+<h1>Listing todo_lists</h1>
 
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th></th>
+    </tr>
+  </thead>
 
-<br>
-<%= @todo_list %>
+  <tbody>
+    <% @todo_lists.each do |todo_list| %>
+      <tr id="<%= dom_id(todo_list) %>">
+        <td><%= todo_list.title %></td>
+        <td><%= todo_list.description %></td>
+        <td>
+          <%= link_to "List Items", todo_list_todo_items_path(todo_list) %>
+          <%= link_to 'Show', todo_list %>
+          <%= link_to 'Edit', edit_todo_list_path(todo_list) %>
+          <%= link_to 'Destroy', todo_list, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 <br/>
-
+<%= link_to 'New Todo list', new_todo_list_path %>
